# algonim

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  shell.nix
algonim/: __main__.py  colors.py  easing.py  hcode.py  python_tracer.py  script.py  time_utils.py  window.py
algonim/primitives/: array.py  arrow.py  hbox.py  hcode.py  text.py  var.py
tests/: test_videoscripts.py
videoprograms/: bubble_sort.py  max_elem.py
videoscripts/: array.py  bubble_sort.py  max_elem.py
